--- a/style.css
+++ b/style.css
@@ -3,4 +3,10 @@ h1 {color:brown;
 #ima1 {width: 70%;
 }
 
+.parte01{
+    background-color: brown;
+}
 
+.parte02{
+    background-color: cadetblue;
+}
